# browseruse-cdp-best-practise

./: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml  run_all_tests.py
src/: __init__.py  browser_manager.py  tools.py
tests/: api_server.py  test_1.py  test_2.py  test_3.py  test_page.html
